# fifa-2026-prediction

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
config/: bracket_2026.yaml  default.yaml
data/reference/: confederations.csv  injuries_2026.yaml  market_odds_2026.csv  venues_2026.csv
docs/superpowers/plans/: 2026-06-28-fifa-2026-end-to-end-demo.md  2026-06-28-fifa-2026-wc-prediction.md  2026-06-29-availability-adjustment.md  2026-06-29-predicted-path.md
docs/superpowers/specs/: 2026-06-28-fifa-2026-end-to-end-demo-design.md  2026-06-28-fifa-2026-wc-prediction-design.md  2026-06-29-availability-adjustment-design.md  2026-06-29-predicted-path-design.md
src/fifa2026/: cache.py  cli.py  config.py  persistence.py  pipeline.py  squad_enrich.py  squad_strength.py  viz.py
tests/: test_app_smoke.py  test_assemble.py  test_backtest.py  test_benchmark.py  test_boosted.py  test_bracket.py  test_bracket_ordering.py  test_cache.py  test_cli_commands.py  test_cli_smoke.py  test_config.py  test_context.py  test_download.py  test_elo.py  test_ensemble.py  test_form.py  test_ingest_matches.py  test_ingest_reference.py  test_ingest_squads.py  test_odds.py  test_persistence.py  test_pipeline_evaluate.py  test_pipeline_predict.py  test_pipeline_train.py  test_poisson.py  test_reference_data.py  test_resolve.py  test_round_probabilities.py  test_squad_enrich.py  test_squad_features.py  test_squad_strength.py  test_viz.py  test_walk.py
tests/fixtures/: confederations.csv  results_sample.csv  squad_sample.json  venues.csv
(+19 files in other folders)
