[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa2026"
version = "0.1.0"
description = "ML engine predicting the 2026 FIFA World Cup champion"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "lightgbm>=4.1",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "requests>=2.31",
  "joblib>=1.3",
  "plotly>=5.18",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # joblib + NumPy 2.5 internal deprecation during model pickling (third-party, not our code)
    "ignore:Setting the shape on a NumPy array.*:DeprecationWarning",
]
